add function get source
